# server/controller/usersController.js
@@ -38,24 +38,40 @@ const getUserById = (req, res) => {
 
   //ok
   const postUser = (req, res) => {
-    const { name, email, password, role, restaurant } = req.body;
-    Users.create({
-      name,
-      email,
-      password,
-      role,
-      restaurant
-    })
-    .then((result) => {
-      res.status(201).json(result);
-    })
-    .catch((error) =>
-        res.status(400).json({
-          code: 400,
-          error: error.message
+    const { name, email, role, restaurant } = req.body;
+    const password = req.body.password;
+
+    Users.findOne({
+      where: {
+        email: email,
+      },
+    }).then((result) => {
+      if (result !== null) {
+        return res
+          .status(403)
+          .json({ code: 403, message: 'Email already in use!' });
+      }
+      return Users.create({
+        name,
+        email,
+        password: bcrypt.hashSync(password, 10),
+        role,
+        restaurant,
+      })
+        .then((result) => {
+          res.status(200).json({
+            id: result.id,
+            name: result.name,
+            email: result.email,
+            role: result.role,
+            restaurant: result.restaurant,
+          });
         })
-      );
-  };
+        .catch((err) => {
+          return res.status(400).json({ code: 400, message: err.message });
+        });
+    });
+  }
 
   //ok
   const putUser = (req, res) => {
